<resources>

    <string name="situationOne">ScrollView嵌套banner</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="app_name">墨瞳漫画</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_name">姓名:</string>
    <string name="login_password">密码：</string>
    <string name="message_tv_phone">请输入手机号:</string>
    <string name="message_tv_message">短信：</string>
    <string name="message_button_message">发送短信</string>
    <string name="message_button_finish">完成</string>
    <string name="message_button_top">上一步</string>
    <string name="landing_button_bottom">下一步</string>
    <string name="home_left_tv_hone">未命名</string>
    <string name="userview">请选择</string>
    <string name="title_activity_attention">AttentionActivity</string>
    <string name="title_activity_parsonal">Parsonal</string>
    <string name="title_activity_attention_acitvity">AttentionAcitvity</string>
    <string name="title_activity_add_attention">AddAttention</string>
    <string name="text_hint">请输入内容</string>
    <string name="title_activity_register">Register</string>
</resources>
