<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

<include android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/include_framelayout" android:layout_alignParentTop="true" layout="@layout/include_top"/>

<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/message_tv_phone" android:text="@string/message_tv_phone" android:textSize="20dp" android:layout_below="@+id/include_framelayout" android:layout_marginTop="20dp"/>

<EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/message_ed_phone" android:layout_below="@+id/message_tv_phone" android:ems="10" android:layout_alignLeft="@+id/message_tv_phone"/>

<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/message_button_message" android:text="@string/message_button_message" android:textSize="15dp" android:layout_below="@+id/message_ed_phone" android:layout_marginTop="20dp" android:layout_alignLeft="@+id/message_ed_phone"/>

<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/message_tv_message" android:text="@string/message_tv_message" android:textSize="20dp" android:layout_below="@+id/message_button_message" android:layout_marginTop="20dp" android:layout_alignLeft="@+id/message_button_message"/>

<EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/message_ed_message" android:layout_below="@+id/message_tv_message" android:ems="10" android:layout_alignLeft="@+id/message_tv_message"/>

<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/message_button_top" android:text="@string/message_button_top" android:textSize="15dp" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true"/>

<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/message_button_finish" android:text="@string/message_button_finish" android:textSize="15dp" android:layout_toRightOf="@+id/message_button_top" android:layout_alignBottom="@+id/message_button_top" android:layout_alignBaseline="@+id/message_button_top"/>

</RelativeLayout>